--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -38,9 +38,14 @@ body{
 
 }
 
+#mainContent{
+    font-size:max(1rem,30px); 
+    z-index: 5;
+}
+
 #sideContent{
     float:right; 
-    z-index:20; 
+    z-index:2; 
     text-align: right;
     margin-right:5vw;
     margin-top:50vh; 
@@ -64,6 +69,11 @@ body{
 .op{
 
     opacity: 0.5;
+}
+
+.op1{
+    opacity: 0.5;
+    
 }
 
 
