--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -17,20 +17,21 @@ and open the template in the editor.
 
 html{
     font-size: min(5vw, 3em); 
-    height:100%;
+
 }
 
 body{
     display: flex;
     flex-wrap: wrap;
-    overflow:hidden;
+    background: #F0EDE6;
+    /*overflow:hidden;*/
 }
 
 #hero{
     background: #F0EDE6;
     /*background-image: linear-gradient(to right, #f72585 , #7209b7, #3a0ca3, #4361ee, #4cc9f0);*/
-    height:100vh;
-    width:100vw;
+    height:100%;
+    width:100%;
     color:#4D3060;
     font-family: "nimbus-sans", sans-serif;
     font-weight: 400;
@@ -39,20 +40,22 @@ body{
 }
 
 #mainContent{
+    margin:40px 90px;
+    padding-bottom: 100px;
     font-size:max(0.5rem,10px); 
     z-index: 5;
+    overflow: scroll;
 }
 
 #sideContent{
     float:right; 
-    z-index:2; 
+    z-index:20; 
     text-align: right;
     margin-right:5vw;
     margin-top:50vh; 
     font-size:max(1rem,30px); 
     position:relative;
 }
-
 
 #sideContent b{
     font-family: "minion-pro", serif;
@@ -72,7 +75,14 @@ body{
 }
 
 .op1{
-    opacity: 0.5;
+    z-index:70; 
+    width:100%;
+    text-align: right;
+    padding-right:50px;
+    margin-top:70vh;
+    position:fixed;
+    font-size:max(0.8rem,30px); 
+    opacity: 0.2;
     
 }
 
