--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -12,19 +12,22 @@ and open the template in the editor.
 *{
     padding:0;
     margin: 0;
+    box-sizing: border-box;
 }
+
 
 
 html{
     font-size: min(5vw, 3em); 
+    
 }
-
 
 
 body{
     display: flex;
     flex-wrap: wrap;
     background: #F0EDE6;
+    -ms-overflow-style: none;  /* IE and Edge */
     /*overflow:hidden;*/
 }
 
@@ -38,6 +41,21 @@ body{
     font-weight: 400;
     font-style: normal;
 
+}
+
+.copyright{
+    float:right; 
+    width:40vw; 
+    height:50px; 
+    right:0; 
+    text-align: center;  
+    margin-top:80vh; 
+    padding-top:10px; 
+    z-index:5; 
+    position:fixed; 
+    font-size:0.35em; 
+    background:rgba(559,559,559,0.8); 
+    border-radius: 15px 15px 0px 0px;
 }
 
 #mainContent{
@@ -97,7 +115,7 @@ a.resume:hover{
 
 .op1{
     display: none;
-    z-index:8; 
+    z-index:8;
     width:50%;
     margin-left:50vw;
     text-align: right;
@@ -337,5 +355,10 @@ textarea:focus {
     font-weight: bold;
     color:white;
 }
+
+/*---------------------*/
+
+
+
 
 
