--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -19,7 +19,7 @@ and open the template in the editor.
 
 html{
     font-size: min(5vw, 3em); 
-    
+
 }
 
 
@@ -45,27 +45,28 @@ body{
 
 .copyright{
     float:right; 
-    width:40vw; 
-    height:50px; 
-    right:0; 
-    text-align: center;  
-    margin-top:80vh; 
+    width:40vw ; 
+    height:50px ; 
+    right:0 ; 
+    text-align: center ;  
+    margin-top:80vh ; 
     padding-top:10px; 
-    z-index:5; 
-    position:fixed; 
-    font-size:0.35em; 
+    z-index:5 ; 
+    position:fixed ; 
+    font-size:0.35em ; 
     background:rgba(559,559,559,0.8); 
-    border-radius: 15px 15px 0px 0px;
+    border-radius: 15px 15px 0px 0px ;
 }
 
 #mainContent{
     margin:40px 90px;
     padding-bottom: 100px;
-    font-size:max(0.5rem,10px); 
+    font-size:max(20px,0.5rem); 
     z-index: 20;
     overflow: scroll;
 
 }
+
 
 /*https://stackoverflow.com/questions/43186015/css-hide-scroll-bar-but-have-element-scrollable*/
 #mainContent::-webkit-scrollbar {
