--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -358,7 +358,214 @@ textarea:focus {
 }
 
 /*---------------------*/
+.main {
+    max-width: 1200px;
+    margin: 40px 0 80px 120px;
+    z-index:30;
+    font-size:max(20px,0.5rem); 
+}
 
+
+.row {
+    margin: 10px - 70px;
+}
+
+
+.col-md-4 {
+    /*width: 33.33%;*/
+    display: none;
+}
+
+/* Content */
+.content {
+    padding: 10px;
+    margin:20px;
+    text-align: center;
+    /*min-width: 40px;
+    min-height:160px;
+    max-height:45vh;*/
+}
+
+.content p{
+    font-size: 0.5rem;
+    font-weight: bold;
+}
+
+.content img{
+    margin: auto 0;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+    display: block;
+}
+
+/* Style the buttons */
+.subNav{
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    color: #CCBAAC;
+    background:none;
+
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.subNav:hover {
+
+    color:white;
+}
+
+.subNav.active {
+
+    color: #4D3060;
+}
+
+/*--------------*/ /*---https://www.w3schools.com/howto/howto_css_modals.asp---*/
+
+body.modal-open {
+    overflow: hidden;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 50px; /* Location of the box */
+    left:0;
+    top: 0;
+    width: 100% ; /* Full width */
+    height: 100% ; /* Full height */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content { /*w3 school*/
+    background-color: #F0EDE6;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80% ;
+    height: 70vh;
+    overflow:hidden;
+    animation: animatezoom 0.6s;
+}
+
+.modal-content row{
+    margin:20px;
+    background:grey;
+}
+
+/*.col-md-11{
+    height: 50vh;
+    overflow-y:scroll;
+    scrollbar-color: #4D3060 #CCBAAC;
+    scrollbar-width: thin;
+}*/
+
+.col-md-6{
+    height:50vh;
+    overflow-y:scroll;
+    scrollbar-color: #4D3060 #CCBAAC;
+    scrollbar-width: thin;
+
+}
+
+.col-md-6::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
+/*------*/
+.colorBox{
+    width: max(1.8rem,50px);
+    font-size:0.4rem;
+    height: 2.2rem;
+    text-align: center;
+    cursor:pointer;
+    display:inline-block;
+    position:relative;
+}
+
+.colorBox::after{
+    content: attr(data-color);
+    display: block;
+    position: absolute;
+    top: 65%; /* Position below the .colorBox element */
+    left: 0;
+    width:100%;
+    background:white;
+    opacity:0;
+    margin:auto;
+}
+
+.colorBox:hover::after {
+    opacity: 1;
+}
+
+@media (max-width: 768px) {
+    
+    .main{
+        margin: 40px 0 90px 50px;
+    }
+    
+    .modal-content {
+        margin:20px;
+        margin-right:-200px;
+        height: auto+20%; /* Allow modal content to grow with its content on smaller screens */
+        overflow-y:scroll;
+        scrollbar-color: #4D3060 #CCBAAC;
+        scrollbar-width: thin;
+        left:30px;
+    }
+
+    .modal-content::-webkit-scrollbar {
+        width: 0px;
+        background: transparent; /* make scrollbar transparent */
+    }
+
+    .col-md-6 {
+        margin-top:20px;
+        height: auto; /* Allow the content in .col-md-6 to expand on smaller screens */
+        overflow: hidden;
+
+    }
+
+    .colorBox::after{
+        opacity: 1;
+        font-size: 0.4rem;
+    }
+}
+
+
+@keyframes animatezoom{
+    from{transform:scale(0)} to{transform:scale(1)}}
+
+    /* The Close Button */
+    .close {
+        color: #aaaaaa;
+        text-align: right;
+        font-size: 0.8rem; /*28px*/
+        margin-bottom: -20px;
+        margin-top:-10px;
+        font-weight: bold;
+        z-index:50;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .contentLink{
+
+        background:white;
+
+    }
 
 
 
