--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -59,7 +59,7 @@ body{
 }
 
 #mainContent{
-    margin:40px 90px;
+    margin:50px 80px;
     padding-bottom: 100px;
     font-size:max(20px,0.5rem); 
     z-index: 20;
@@ -146,7 +146,7 @@ nav{
 
 .navbar-text,.nav-link{
     color: white;
-    text-size-adjust: 70%;
+    text-size-adjust: 70%; /*--not supported on firefox, https://developer.mozilla.org/en-US/docs/Web/CSS/text-size-adjust--*/
 
 }
 
@@ -315,8 +315,8 @@ ul#nav > li.selected::before {
 /*--https://www.w3schools.com/css/tryit.asp?filename=trycss_form_focus2--*/
 
 input[type = "text"], input[type = "email"] {
-    width: max(50vw,200px);
-    height:1rem;
+    width: max(60vw,250px);
+    height:1.3rem;
     box-sizing: border-box;
     border: none;
     border-bottom: 4px solid #ccc;
@@ -330,7 +330,7 @@ input[type=text]:focus, input[type="email"]:focus {
 }
 
 textarea{
-    width: max(50vw,200px);
+    width: max(60vw,250px);
     min-height: 20vh;
     border: 4px solid #ccc;
     -webkit-transition: 0.5s;
