--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -507,6 +507,11 @@ body.modal-open {
     opacity: 1;
 }
 
+.credit{
+    font-size: 0.4rem;
+    float:right;
+}
+
 @media (max-width: 768px) { /*mobile*/
     .main{
         margin: 40px 0 90px 50px;
@@ -616,7 +621,7 @@ body.modal-open {
         padding-top:20px;
         text-decoration: none;
         color: black;
-        font-size:0.4rem;
+        font-size:0.5rem;
 
     }
 
