--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -101,7 +101,7 @@ a.resume:hover{
     font-family: "minion-pro", serif;
     font-weight: 450;
     font-style:normal;
-    color:#CCBAAC;
+    color: #E6B09A; /*#B3A992; #CCBAAC;*/
     font-size:2.8rem;
 }
 
@@ -138,7 +138,7 @@ nav{
 }
 
 .nav-bg{
-    background: #4D3060;
+    background: #E6B09A; /*#B3A992; #CCBAAC; #4D3060;*/
     height:15vh;
     width:100vw;
     z-index:-10;
@@ -162,7 +162,7 @@ nav a{
 
 .nav-link:hover{
 
-    color:#CCBAAC;
+    color: #4D3060; /*#CCBAAC;*/
 }
 
 .right{
@@ -197,12 +197,12 @@ nav a{
     color: black;
     font-size: 17px;
     z-index: 35;
-    background-color: #CCBAAC;
+    background-color: #E6B09A; /*#B3A992; #CCBAAC;*/
 }
 
 .sticky-icon-bar a:hover {
     background-color: black;
-    color: #CCBAAC;
+    color: #E6B09A; /*#B3A992; #CCBAAC;*/
 }
 
 /*----------*/
@@ -224,11 +224,11 @@ ul#nav>li {
 }
 
 ul#nav>li:not(.selected):not(#nav_indicator):hover {
-    border-bottom: 0.15rem solid #CCBAAC;
+    border-bottom: 0.15rem solid #4D3060; /*#CCBAAC;*/
 }
 
 ul#nav>li:not(#nav_indicator) {
-    border-bottom: 0.15rem solid #4D3060;
+    border-bottom: 0.15rem solid #E6B09A;/*#B3A992; #CCBAAC; #4D3060;*/ 
     cursor: pointer;
     transition-duration: 0.5s, 0.5s;
     transition-property: color, border-color;
@@ -327,7 +327,7 @@ textarea:focus {
 
 .btn-bg{
     /*background: #4D3060;*/
-    background-image: linear-gradient(to right,  #4D3060 0%, #CCBAAC  51%,  #4D3060  100%);
+    background-image: linear-gradient(to right,  #4D3060 0%, #E6B09A /*#B3A992 #CCBAAC*/  51%,  #4D3060  100%);
 }
 
 .btn{
@@ -398,7 +398,7 @@ textarea:focus {
     border: none;
     outline: none;
     padding: 12px 16px;
-    color: #CCBAAC;
+    color: #E6B09A; /*#B3A992; #CCBAAC;*/
     background:none;
 
     cursor: pointer;
@@ -465,7 +465,7 @@ body.modal-open {
 .col-md-5, .col-md-7{
     height:50vh;
     overflow-y:scroll;
-    scrollbar-color: #4D3060 #CCBAAC;
+    scrollbar-color: #4D3060 #E6B09A; /*#B3A992; #CCBAAC;*/
     scrollbar-width: thin;
 
 }
@@ -522,7 +522,7 @@ body.modal-open {
         margin-right:-200px;
         height: auto+20%; /* Allow modal content to grow with its content on smaller screens */
         overflow-y:scroll;
-        scrollbar-color: #4D3060 #CCBAAC;
+        scrollbar-color: #4D3060 #E6B09A; /*#B3A992; #CCBAAC;*/
         scrollbar-width: thin;
         left:30px;
     }
