--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -280,7 +280,7 @@ ul#nav > li.selected::before {
     left: 0;
     width: 100vw;
     height: 20vh;
-    background: linear-gradient(to right, #4D3060 40%, transparent 100%);
+    background: linear-gradient(to right, #E6B09A/*#4D3060*/ 40%, transparent 100%);
     animation: slideRight 3s ease-in-out forwards;
     display:none;
 }
