--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -18,7 +18,7 @@ and open the template in the editor.
 
 
 html{
-    font-size: min(5vw, 3em); 
+    font-size: min(5vw,2.5em)/*min(5vw, 3em)*/; 
 
 }
 
@@ -26,17 +26,17 @@ html{
 body{
     display: flex;
     flex-wrap: wrap;
-    background: #F0EDE6;
+    background: #F7B6B6/*#F0EDE6*/;
     -ms-overflow-style: none;  /* IE and Edge */
     /*overflow:hidden;*/
 }
 
 #hero{
-    background: #F0EDE6;
+    background: #F7B6B6/*#F0EDE6*/;
     /*background-image: linear-gradient(to right, #f72585 , #7209b7, #3a0ca3, #4361ee, #4cc9f0);*/
     height:100%;
     width:100%;
-    color:#4D3060;
+    color:#000000;/*#4D3060;*/
     font-family: "nimbus-sans", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -47,14 +47,15 @@ body{
     float:right; 
     width:40vw ; 
     height:50px ; 
+    color:white;
     right:0 ; 
     text-align: center ;  
     margin-top:80vh ; 
     padding-top:10px; 
     z-index:5 ; 
     position:fixed ; 
-    font-size:0.35em ; 
-    background:rgba(559,559,559,0.8); 
+    font-size:0.27em ; 
+    background:rgba(0,0,0,0.8);
     border-radius: 15px 15px 0px 0px ;
 }
 
@@ -76,7 +77,7 @@ body{
 
 a.resume{
     text-decoration: none;
-    color: #4D3060;
+    color: black;
     opacity: 0.7;
     cursor:pointer;
 }
@@ -101,7 +102,7 @@ a.resume:hover{
     font-family: "minion-pro", serif;
     font-weight: 450;
     font-style:normal;
-    color: #E6B09A; /*#B3A992; #CCBAAC;*/
+    color: black; /*#B3A992; #CCBAAC;*/
     font-size:2.8rem;
 }
 
@@ -138,7 +139,7 @@ nav{
 }
 
 .nav-bg{
-    background: #E6B09A; /*#B3A992; #CCBAAC; #4D3060;*/
+    background: #000000;/*#E6B09A;*/ /*#B3A992; #CCBAAC; #4D3060;*/
     height:15vh;
     width:100vw;
     z-index:-10;
@@ -162,12 +163,20 @@ nav a{
 
 .nav-link:hover{
 
-    color: #4D3060; /*#CCBAAC;*/
+    color: #F7B6B6 ; /*#CCBAAC;*/
 }
 
 .right{
     float:right;
     font-size: 0.2rem;
+}
+
+#logoLink{
+    color:#F7B6B6;
+}
+
+#logoLink:hover{
+    color:white;
 }
 
 .logo2{
@@ -194,15 +203,15 @@ nav a{
     text-align: center;
     padding: 15px;
     transition: all 0.3s ease;
-    color: black;
+    color: #F7B6B6; /**/
     font-size: 17px;
     z-index: 35;
-    background-color: #E6B09A; /*#B3A992; #CCBAAC;*/
+    background-color: #000000;/*#E6B09A;*/ /*#B3A992; #CCBAAC;*/
 }
 
 .sticky-icon-bar a:hover {
-    background-color: black;
-    color: #E6B09A; /*#B3A992; #CCBAAC;*/
+    background-color: #F7B6B6;
+    color: white; /*#B3A992; #CCBAAC;*/
 }
 
 /*----------*/
@@ -211,8 +220,8 @@ ul#nav {
 }
 
 ul#nav > li.selected {
-    color: white !important;
-    border-bottom: 0.15rem solid white !important;
+    color: #F7B6B6 !important;
+    border-bottom: 0.15rem solid #F7B6B6 !important;
     max-width: 80%;
     white-space: nowrap;
     overflow: hidden;
@@ -224,11 +233,11 @@ ul#nav>li {
 }
 
 ul#nav>li:not(.selected):not(#nav_indicator):hover {
-    border-bottom: 0.15rem solid #4D3060; /*#CCBAAC;*/
+    border-bottom: 0.15rem solid #F7B6B6; /*#CCBAAC;*/
 }
 
 ul#nav>li:not(#nav_indicator) {
-    border-bottom: 0.15rem solid #E6B09A;/*#B3A992; #CCBAAC; #4D3060;*/ 
+    border-bottom: 0.15rem solid black;/*#B3A992; #CCBAAC; #4D3060;*/ 
     cursor: pointer;
     transition-duration: 0.5s, 0.5s;
     transition-property: color, border-color;
@@ -268,7 +277,7 @@ ul#nav > li.selected::before {
 .transition-Holder{
     float:left;
     display:none;
-    background:#F0EDE6;
+    background:#F7B6B6 /*#F0EDE6*/;
     height:100vh;
     width:100vh;
 }
@@ -280,7 +289,7 @@ ul#nav > li.selected::before {
     left: 0;
     width: 100vw;
     height: 20vh;
-    background: linear-gradient(to right, #E6B09A/*#4D3060*/ 40%, transparent 100%);
+    background: linear-gradient(to right, black/*#4D3060*/ 40%, transparent 100%);
     animation: slideRight 3s ease-in-out forwards;
     display:none;
 }
@@ -309,7 +318,7 @@ input[type = "text"], input[type = "email"] {
 }
 
 input[type=text]:focus, input[type="email"]:focus {
-    border-bottom: 4px solid #4D3060;
+    border-bottom: 4px solid black;
 }
 
 textarea{
@@ -322,12 +331,12 @@ textarea{
 }
 
 textarea:focus {
-    border: 4px solid #4D3060;
+    border: 4px solid black;
 }
 
 .btn-bg{
     /*background: #4D3060;*/
-    background-image: linear-gradient(to right,  #4D3060 0%, #E6B09A /*#B3A992 #CCBAAC*/  51%,  #4D3060  100%);
+    background-image: linear-gradient(to right,  black 0%, #F7B6B6 /*#B3A992 #CCBAAC*/  51%,  black  100%);
 }
 
 .btn{
@@ -360,7 +369,7 @@ textarea:focus {
 
 
 .row {
-   /* margin: 10px 70px; */
+    /* margin: 10px 70px; */
 }
 
 
@@ -380,7 +389,7 @@ textarea:focus {
 }
 
 .content p{
-    font-size: 0.5rem;
+    font-size: 0.55rem;
     font-weight: bold;
 }
 
@@ -398,7 +407,7 @@ textarea:focus {
     border: none;
     outline: none;
     padding: 12px 16px;
-    color: #E6B09A; /*#B3A992; #CCBAAC;*/
+    color: white; /*#B3A992; #CCBAAC;*/
     background:none;
 
     cursor: pointer;
@@ -407,12 +416,12 @@ textarea:focus {
 
 .subNav:hover {
 
-    color:white;
+    color:black;
 }
 
 .subNav.active {
 
-    color: #4D3060;
+    color: black;
 }
 
 /*--------------*/ /*---https://www.w3schools.com/howto/howto_css_modals.asp---*/
@@ -436,7 +445,7 @@ body.modal-open {
 
 /* Modal Content */
 .modal-content { /*w3 school*/
-    background-color: #F0EDE6;
+    background-color: #F7B6B6 /*#F0EDE6*/;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
@@ -465,7 +474,7 @@ body.modal-open {
 .col-md-5, .col-md-7{
     height:50vh;
     overflow-y:scroll;
-    scrollbar-color: #4D3060 #E6B09A; /*#B3A992; #CCBAAC;*/
+    scrollbar-color: black white; /*#B3A992; #CCBAAC;*/
     scrollbar-width: thin;
 
 }
@@ -516,13 +525,18 @@ body.modal-open {
     .main{
         margin: 40px 0 90px 50px;
     }
+    
+    .content p{
+        font-size: 1rem;
+        font-weight: normal;
+    }
 
     .modal-content {
         margin:20px;
         margin-right:-200px;
         height: auto+20%; /* Allow modal content to grow with its content on smaller screens */
         overflow-y:scroll;
-        scrollbar-color: #4D3060 #E6B09A; /*#B3A992; #CCBAAC;*/
+        scrollbar-color: black white; /*#B3A992; #CCBAAC;*/
         scrollbar-width: thin;
         left:30px;
     }
@@ -560,14 +574,14 @@ body.modal-open {
         max-height:350px;
         width:100%;
     }
-    
+
     .imgContent4{
         width:100%;
         margin:auto;
         padding-left:40px;
     }
-    
-    
+
+
 
 }
 
