--- a/portfolio/stylesheet/style.css
+++ b/portfolio/stylesheet/style.css
@@ -68,6 +68,16 @@ body{
 
 }
 
+@keyframes orbitAnimation {
+    from {
+        transform: rotate(0deg);
+        opactiy: 0.4;
+    }
+    to {
+        transform:rotate(-360deg);
+        opacity:0.7;
+    }
+}
 
 /*https://stackoverflow.com/questions/43186015/css-hide-scroll-bar-but-have-element-scrollable*/
 #mainContent::-webkit-scrollbar {
@@ -530,6 +540,10 @@ body.modal-open {
         font-size: 1rem;
         font-weight: normal;
     }
+    
+    .center{
+        margin-left:-400px;
+    }
 
     .modal-content {
         margin:20px;
@@ -592,6 +606,10 @@ body.modal-open {
 
     #logo1{
         display:none;
+    }
+    
+    .center{
+        margin-left:-700px;
     }
 
     .op1{
@@ -658,7 +676,125 @@ body.modal-open {
         cursor: zoom-out;
         margin:300px;
     }*/
+    
+    
+    /*----*/
+/*    @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400');
+
+.center {
+  position: absolute;
+  top: 49.5%;
+  left: 0;
+  right: 0;
+  margin-top: -22.5px;
+}
+.carousel {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  font-size: 30px;
+  line-height: 45px;
+  height: 45px;
+}
+
+.carousel .pre {
+  position: absolute;
+  top: 0;
+  right: 52%;
+  height: 45px;
+  text-shadow: 1px 1px 1px #3c2254;
+  font-weight: 300;
+}
+.carousel .change_outer {
+  position: absolute;
+  top: 0;
+  left: 54%;
+  text-align: left;
+  height: 45px;
+  overflow: hidden;
+}
+.carousel .change_outer .change_inner {
+  position: relative;
+  animation: rotate 8s ease-in-out infinite;
+}
+.carousel .change_outer .element {
+  display: block;
+}
+
+@keyframes rotate {
+ 10%, 15%, 100% {
+            transform: translateY(0);
+  }
+  25%,36% {
+            transform: translateY(-45px);
+  }
+  46%,57% {
+            transform: translateY(-90px);
+  }
+  67%,78% {
+            transform: translateY(-135px);
+  }
+  88%, 99% {
+            transform: translateY(-180px);
+  }
+}*/
 
 
+.center {
+  position: absolute;
+  top:0;
+  left: 0;
+  right: 0;
+  margin-top: 100px;
+}
+.carousel {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  height: 100px;
+}
+
+.carousel .change_outer {
+  position: absolute;
+  top: 0;
+  left: 54%;
+  text-align: left;
+  height: 100px;
+  overflow: hidden;
+}
+.carousel .change_outer .change_inner {
+  position: relative;
+  animation: rotate 10s ease-in-out infinite;
+}
+.carousel .change_outer .element {
+  display: block;
+}
+
+@keyframes rotate {
+  7.14%, 12.5%, 100% {
+    transform: translateY(0);
+  }
+  21.42%, 28.57% {
+    transform: translateY(-100px);
+  }
+  35.71%, 42.85% {
+    transform: translateY(-200px);
+  }
+  50%, 57.14% {
+    transform: translateY(-300px);
+  }
+  64.28%, 71.42% {
+    transform: translateY(-400px);
+  }
+  78.57%, 85.71% {
+    transform: translateY(-500px);
+  }
+  92.85%, 99.99% {
+    transform: translateY(-600px);
+  }
+}
+
+
+  
 
 
