--- a/testing/styles/style.css
+++ b/testing/styles/style.css
@@ -111,11 +111,11 @@ body {
 
 /*---main---*/
 .main {
-    align-items: center;
     height: 100%;
+    width:60%;
     text-align: center;
     opacity: 0.9;
-    margin: -15% auto;
+    margin: 10% auto;
     position: relative;
     z-index: 1;
 
@@ -185,6 +185,7 @@ body {
 .circle {
     width: 10rem;
     height: 10rem;
+    opacity:0.8;
     background-color: #3498db;
     border-radius: 50%;
     position: fixed;
@@ -194,8 +195,8 @@ body {
 #circle1 {
     background: url(../images/img4.jpg);
     background-size: cover;
-    top: 10%;
-    left: 20%;
+    top: 15%;
+    left: 25%;
 }
 
 #circle2 {
@@ -203,8 +204,8 @@ body {
     height: 8rem;
     background: url(../images/img1.jpg);
     background-size: cover;
-    top: 50%;
-    left: 60%;
+    top: 55%;
+    left: 70%;
 }
 
 #circle3 {
@@ -213,7 +214,7 @@ body {
     background: url(../images/img3.jpg);
     background-size: cover;
     top: 80%;
-    left: 40%;
+    left: 35%;
 }
 
 #circle4 {
@@ -221,6 +222,19 @@ body {
     height: 7rem;
     background: url(../images/img2.jpg);
     background-size: cover;
-    top: 20%;
-    left: 70%;
+    top: 25%;
+    left: 65%;
+}
+
+@media screen and (min-width:350px) and (orientation:portrait){
+    .main {
+        margin: 60% auto;
+    
+    }
+
+    .imgAnim {
+        width: 100%;
+        max-height:(30vh,50px);
+    }
+
 }
