--- a/testing/styles/style.css
+++ b/testing/styles/style.css
@@ -169,8 +169,6 @@ body {
 /*-----*/
 
 .circle-container {
-    /*display: flex;
-    gap: 20px;*/
     position: absolute;
     top: 40vh;
     left: 50%;
@@ -226,19 +224,67 @@ body {
 }
 
 @media screen and (min-width:350px) and (orientation:portrait){
-    .main {
+
+   .main {
         height: 50vh;
         margin: 60% auto;
+        height: auto;
+        width:90vw;
     }
+
+    .btn_1 {
+        height: 80px;
+        font-size: 2rem;
+    }
+
+    /*
 
     .imgAnim {
         width: 100%;
         max-height:(30vh,50px);
     }
 
+
     .container {
         height:50%;
         border-radius: 80%;
+    }*/
+    
+    .circle {
+        width: 20rem;
+        height: 20rem;
+    }
+    
+    #circle1 {
+        top: 0;
+        left: 25%;
+    }
+    
+    #circle2 {
+        width: 8rem;
+        height: 8rem;
+        background: url(../images/img1.jpg);
+        background-size: cover;
+        top: 55%;
+        left: 70%;
+    }
+    
+    #circle3 {
+        width: 5rem;
+        height: 5rem;
+        background: url(../images/img3.jpg);
+        background-size: cover;
+        top: 80%;
+        left: 35%;
+    }
+    
+    #circle4 {
+        width: 7rem;
+        height: 7rem;
+        background: url(../images/img2.jpg);
+        background-size: cover;
+        top: 25%;
+        left: 65%;
     }
 
 }
