--- a/webPg/styles/style.css
+++ b/webPg/styles/style.css
@@ -1,14 +1,14 @@
-html{
+html {
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
-    background: rgb(29,27,61);
-    background: linear-gradient(0deg, rgba(29,27,61,1) 0%, rgba(44,9,121,0.9959383411567753) 35%, rgba(0,212,255,1) 100%); 
+    background: rgb(29, 27, 61);
+    background: linear-gradient(0deg, rgba(29, 27, 61, 1) 0%, rgba(44, 9, 121, 0.9959383411567753) 35%, rgba(0, 212, 255, 1) 100%);
     /*background: rgb(29,27,61);
     background: linear-gradient(195deg, rgba(29,27,61,1) 0%, rgba(44,9,121,0.9959383411567753) 35%, rgba(0,212,255,1) 100%); 
     */
 }
 
-.part{
+.part {
     scroll-snap-align: start;
     scroll-padding-top: 40px;
 }
@@ -17,32 +17,32 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    overflow-x: hidden; 
+    overflow-x: hidden;
     background-image:
-radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
-radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
-background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
-animation: twinkle1 20s infinite ease-in-out, twinkle2 20s infinite ease-in-out;
+        radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px),
+        radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+    animation: twinkle1 20s infinite ease-in-out, twinkle2 20s infinite ease-in-out;
 }
 
 @keyframes twinkle1 {
     0% {
         background-image:
-        radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 30px),
-        radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 20px);
+            radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 30px),
+            radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 20px);
     }
 
     50% {
         background-image:
-        radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 20px),
-        radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 10px);
+            radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 20px),
+            radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 10px);
     }
-    
+
     100% {
         background-image:
-        radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
-        radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+            radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px),
+            radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
     }
 
 }
@@ -50,24 +50,23 @@ animation: twinkle1 20s infinite ease-in-out, twinkle2 20s infinite ease-in-out;
 @keyframes twinkle2 {
     0% {
         background-image:
-        radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
-        radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+            radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 40px),
+            radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 30px);
     }
 
     50% {
         background-image:
-        radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 20px),
-        radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 10px);
+            radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 20px),
+            radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 10px);
     }
-    
+
     100% {
         background-image:
-        radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 30px),
-        radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 20px);
+            radial-gradient(white, rgba(255, 255, 255, .2) 2px, transparent 30px),
+            radial-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .1) 2px, transparent 20px);
     }
 
 }
-
 
 nav {
     background-color: rgba(248, 249, 250, 0.8);
@@ -98,25 +97,25 @@ nav ul li a {
     color: inherit;
 }
 
-.after{
-    width:100%;
+.after {
+    width: 100%;
     z-index: 4;
     position: fixed;
-    margin-top:-20px;
+    margin-top: -20px;
     pointer-events: none;
 }
 
-.after > img{
+.after>img {
     object-fit: cover;
     pointer-events: none;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
 }
 
-.titleH{
-    z-index:6;
+.titleH {
+    z-index: 6;
     position: relative;
-    color:white;
+    color: white;
 }
 
 header,
@@ -125,49 +124,66 @@ footer {
     background-color: #f8f9fa;
     padding: 0.5rem;
     text-align: center;
-    z-index:5;
+    z-index: 5;
 }
 
 footer {
     position: fixed;
     bottom: 0;
-    width: 100%;
+    font-size: small;
 }
 
-section, .hero {
+section,
+.hero {
     width: 100vw;
     height: 100vh;
-    z-index:1;
-    margin:0;
+    z-index: 1;
+    margin: 0;
 }
 
-.content{
-    padding-top:30px;
-    padding-left:20px;
+.content {
+    padding-top: 30px;
+    padding-left: 20px;
 }
 
 #hero {
-    color: #fff; /* White text */
+    color: #fff;
+    /* White text */
 }
 
-#about {
-    /*something*/
-}
-
-#contact {
-   /*something*/
-}
-
-/* Adjust scrolling to account for fixed navigation bar */
 :target:before {
     content: "";
     display: block;
-    height: 50px; 
+    height: 50px;
     margin: -50px 0 0;
 }
 
+@media screen and (min-width:350px) and (max-width:800px) and (orientation:portrait)  {
+    
+    nav{
+        background:black;
+    }
 
+    nav{
+        height:20px;
+        z-index: 7;
+    }
 
+    footer{
+        padding-top:-40px;
+        margin-top:20px;
+    }
 
+    .part{
+        padding-top:40px;
+    }
 
+    .after {
+        margin-top: 30px;
+    }
 
+    iframe{
+        margin-left: -5px !important;
+    }
+
+}
