--- a/portfolio/stylesheet/style2.css
+++ b/portfolio/stylesheet/style2.css
@@ -17,16 +17,17 @@ body {
         z-index: 10;
       }
       button {
-        background: #333;
+        background: rgba(0,0,0,0.3);
         color: white;
-        border: 1px solid #555;
-        padding: 10px 20px;
+        border-radius: 10px;
+        border: 0px solid transparent;
+        padding: 8px 12px;
         margin: 0 10px;
         cursor: pointer;
         font-size: 1em;
       }
       button:hover {
-        background: #555;
+        background: rgba(102, 102, 102, 0.3);
       }
 
       #pdfModal {
