--- a/portfolio/stylesheet/style2.css
+++ b/portfolio/stylesheet/style2.css
@@ -78,6 +78,22 @@ body {
   padding: 20px;
 }
 
+ .box3 {
+  float: left;
+  width: 70%;
+  height:70%;
+  padding: 20px;
+  margin: 20px 10px 0px 0px;
+}
+
+  .box4 {
+  float: left;
+  width: 15%;
+  height:60%;
+  padding: 20px 10px;
+  margin: 20px 0px;
+}
+
 .clearfix > div > p{
   color:black;
 }
@@ -90,4 +106,33 @@ body {
 
 img {
   pointer-events: none;
+}
+
+.colorBox{
+  margin-left:20px;
+    width: max(4.5rem,70px);
+    font-size:1rem;
+    height: 4.2rem;
+    text-align: center;
+    cursor:pointer;
+    display:inline-block;
+    position:relative;
+    border-radius: 15px;
+}
+
+.colorBox::after{
+    content: attr(data-color);
+    display: block;
+    position: absolute;
+    top: 50%; /* Position below the .colorBox element */
+    left: 0;
+    width:100%;
+    height:30%;
+    background:rgba(255, 255, 255, 0.50);
+    opacity:0;
+    margin:auto;
+}
+
+.colorBox:hover::after {
+    opacity: 1;
 }
